# DeepLearning

./: .gitignore  extract_info.py  gradient_descent_explained.html  inspect_notebook.py  main.py  pyproject.toml  update_notebook.py
.claude/: launch.json
.obsidian/: workspace.json
Midterm/: Deeplearning.pptx  README.md
Midterm/Notebook/: Gemma4_VQA_Radiology-2_full.ipynb  Gemma4_VQA_Radiology.ipynb  note.quick.md
Midterm/code_ref/: Gemma3_(4B)_Vision.ipynb  medgemma.ipynb  vqa-model.ipynb
Midterm/docs/: BẠn nghĩ code hay cái này đủ chưa __nếu bổ sung và.md  Link.md  Models.md
Midterm/vqa_final/: benchmark_4.ipynb  v3-vqa-2b-it.ipynb  v3-vqa-4b-it.ipynb  v4-vqa-benchmark.ipynb
docs/: 6.4.txt  Deep Learning revise.md
docs/6.11/: Kich_ban_thuyet_trinh.md  README.md  Slide.md  Stochastic, Mini-Batch, Batch Gradient Descent.ipynb  cheatsheet.md  glossary_gradient_backpropagation.md  note.md  (+2 more)
gradient_descent/: draw_mlp_backward.py  draw_mlp_forward.py  linear_regression.py  logistic_regression.py  mlp_backpropagation.py  optimizers_comparison.py  regularization_ablation.py  run_all.py
notebook/: MLP_Backpropagation_Notebook.ipynb  MLP_MNIST_PyTorch_Notebook.ipynb  MLP_PyTorch_Notebook.ipynb  PyTorch_MLP_Classification_Notebook.ipynb  PyTorch_MLP_Regression_Notebook.ipynb  PyTorch_Two_Networks_Connection.ipynb  optimization_and_overfitting_combined.ipynb  optimizers_comparison.ipynb  regularization_ablation_notebook.ipynb  two_networks_connection.py
scratch/: build_gemma4_notebook.py  build_optimizers_notebook.py  inspect_notebooks.py
(+14 files in other folders)
