[project]
name = "gradient-descent-from-scratch"
version = "0.1.0"
description = "Gradient Descent from scratch - Linear & Logistic Regression with NumPy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "matplotlib>=3.9",
    "scikit-learn>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gradient_descent"]

[project.scripts]
train-linear = "gradient_descent.linear_regression:main"
train-logistic = "gradient_descent.logistic_regression:main"
train-all = "gradient_descent.run_all:main"
